objects/Total_Expense__c.object
<CustomObject>
    <fields>
        <fullName>Activities_Entry_Fees__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Activities/Entry Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Breakfast__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Breakfast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Coffee_Snacks__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Coffee/Snacks</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dinner__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Dinner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lunch__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Lunch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_expense_for_the_trip__c</fullName>
        <label>Total expense for the trip</label>
        <summarizedField>Expense__c.Expense_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>balance_arpit__c</fullName>
        <formula>pocket_arpit__c - total_arpit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arpit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>balance_harsh__c</fullName>
        <formula>pocket_harsh__c - total_harsh__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Harsh</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>balance_krutarth__c</fullName>
        <formula>pocket_krutarth__c - total_krutarth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Krutarth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>balance_nirali__c</fullName>
        <formula>pocket_nirali__c - total_nirali__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nirali</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>balance_palak__c</fullName>
        <formula>pocket_palak__c - total_palak__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Palak</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>balance_purav__c</fullName>
        <formula>pocket_purav__c - total_purav__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purav</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>balance_rutvi__c</fullName>
        <formula>pocket_rutvi__c - total_rutvi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rutvi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>balance_tirth__c</fullName>
        <formula>pocket_tirth__c - total_tirth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tirth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>balance_urvish__c</fullName>
        <formula>pocket_urvish__c -  total_urvish__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urvish</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>personal_arpit__c</fullName>
        <label>Arpit</label>
        <summarizedField>Expense__c.Arpit__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>personal_harsh__c</fullName>
        <label>Harsh</label>
        <summarizedField>Expense__c.Harsh__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>personal_krutarth__c</fullName>
        <label>Krutarth</label>
        <summarizedField>Expense__c.Krutarth__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>personal_nirali__c</fullName>
        <label>Nirali</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>personal_palak__c</fullName>
        <label>Palak</label>
        <summarizedField>Expense__c.Palak__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>personal_purav__c</fullName>
        <label>Purav</label>
        <summarizedField>Expense__c.Purav__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>personal_rutvi__c</fullName>
        <label>Rutvi</label>
        <summarizedField>Expense__c.Rutvi__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>personal_tirth__c</fullName>
        <label>Tirth</label>
        <summarizedField>Expense__c.Tirth__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>personal_urvish__c</fullName>
        <label>Urvish</label>
        <summarizedField>Expense__c.Urvish__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pocket_arpit__c</fullName>
        <label>Arpit</label>
        <summarizedField>Expense__c.Expense_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.Expense_Owner__c</field>
            <operation>equals</operation>
            <value>Arpit</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pocket_harsh__c</fullName>
        <label>Harsh</label>
        <summarizedField>Expense__c.Expense_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.Expense_Owner__c</field>
            <operation>equals</operation>
            <value>Harsh</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pocket_krutarth__c</fullName>
        <label>Krutarth</label>
        <summarizedField>Expense__c.Expense_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.Expense_Owner__c</field>
            <operation>equals</operation>
            <value>Krutarth</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pocket_nirali__c</fullName>
        <label>Nirali</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pocket_palak__c</fullName>
        <label>Palak</label>
        <summarizedField>Expense__c.Expense_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.Expense_Owner__c</field>
            <operation>equals</operation>
            <value>Palak</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pocket_purav__c</fullName>
        <label>Purav</label>
        <summarizedField>Expense__c.Expense_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.Expense_Owner__c</field>
            <operation>equals</operation>
            <value>Purav</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pocket_rutvi__c</fullName>
        <label>Rutvi</label>
        <summarizedField>Expense__c.Expense_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.Expense_Owner__c</field>
            <operation>equals</operation>
            <value>Rutvi</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pocket_tirth__c</fullName>
        <label>Tirth</label>
        <summarizedField>Expense__c.Expense_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.Expense_Owner__c</field>
            <operation>equals</operation>
            <value>Tirth</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pocket_urvish__c</fullName>
        <label>Urvish</label>
        <summarizedField>Expense__c.Expense_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.Expense_Owner__c</field>
            <operation>equals</operation>
            <value>Urvish</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>total_arpit__c</fullName>
        <label>Arpit</label>
        <summarizedField>Expense__c.Arpit__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>total_harsh__c</fullName>
        <label>Harsh</label>
        <summarizedField>Expense__c.Harsh__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>total_krutarth__c</fullName>
        <label>Krutarth</label>
        <summarizedField>Expense__c.Krutarth__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>total_nirali__c</fullName>
        <label>Nirali</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>total_palak__c</fullName>
        <label>Palak</label>
        <summarizedField>Expense__c.Palak__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>total_purav__c</fullName>
        <label>Purav</label>
        <summarizedField>Expense__c.Purav__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>total_rutvi__c</fullName>
        <label>Rutvi</label>
        <summarizedField>Expense__c.Rutvi__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>total_tirth__c</fullName>
        <label>Tirth</label>
        <summarizedField>Expense__c.Tirth__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>total_urvish__c</fullName>
        <label>Urvish</label>
        <summarizedField>Expense__c.Urvish__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Personal Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Parent_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Total Expense</label>
    <nameField>
        <label>Trip Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Total Expense</pluralLabel>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>